# AgenticSQL

./: README.md
agsql/: 1NER.json  2SchemaMAP.json  3stepTimefilter.json  4stepnormalize.json  5generate_sql.json  NER.json  README.md  SchemaMAP.json  pyproject.toml  report.md  step3Timefilter.json  step4normalize_columns_task.json
agsql/knowledge/: user_preference.txt
agsql/src/agsql/: crew.py  main.py
agsql/src/agsql/config/: agents.yaml  tasks.yaml
agsql/src/agsql/tools/: NaturalTimeParserDEFAULTTool.py  SchemaExtractorTool.py  custom_tool.py
